--- a/my_website/index.html
+++ b/my_website/index.html
@@ -1,16 +1,19 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Home</title>
-  
-  <body background="images/chevron.jpg.jpg"
+<html>
+<head>
+<title>Page Title</title>
+</head>  
+  <body background="images/chevron.jpg">
+    
+  </body>
     
   </head>
   <body>
-    <a href="home.jpg">home</a>
-    <a href="profiles.html">Portfolio</a>
+    <a href="index.html">home</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="about_me.html">about me</a>
     <h1>Adriana's Page!</h1>
-    <img src="chevron.jpg.jpg" height="250">
+    <img src="images/adriana.jpg" height="250">
+    <img src="images/chevron.jpg" height="250">
   </body>
 </html>
