--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -4,14 +4,28 @@
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
 	  </head>
-	  <body>
-    <a href="index.html">Home</a>
+	  <body background="images/chevron.jpg">
+	    
+	  </body>
+	  
+    <a href="index.html">home</a>
     <a href="portfolio.html">Portfolio</a>
+    <a href="about_me.html">about me</a>
     <h1>This is my Portfolio Page!</h1>
-    <img src="images/portfolio.jpg" height="250">
+    <img src="images/pink.jpg.jpg" height="250">
     <br>
-    <a target="_blank" href="https://scratch.mit.edu">
-      <img src="images/scratchlogo.jpg" height="100">
+    <a target="_blank" href="https://scratch.mit.edu/projects/119076935/">
+      <img src="images/scratch_logo.jpg" height="100"></a>
+    <a target="_blank" href="https://repl.it/ECOe/6">
+      <img src="images/replit.jpg" height="100">
     </a>
+    <img src="images/arduino.jpg" height="100">
+    
+    <img src="images/blink.PNG" height="100">
+    <p>This is my code that I made</p>
+    </a>
+    <a target="_blank" href="http://www.netlogoweb.org/launch#"> 
+      <img src="images/netlogo.jpg" height="100"> </a>
+      <p>netlogo is a multi-agent programmable modeling environment and it is used by tens of thousands of students, teachers and researchers worldwide.</p>
 	  </body>
 	</html>
